[gd_scene load_steps=3 format=4 uid="uid://bgeqrejsugfh4"]

[ext_resource type="Script" uid="uid://b1dquuydfsbrb" path="res://scripts/test_area.gd" id="1_728w6"]
[ext_resource type="TileSet" uid="uid://ce704ljctriud" path="res://assets/tilesets/Main.tres" id="2_ke1ju"]

[node name="BattleTestArena" type="Node2D"]
script = ExtResource("1_728w6")

[node name="L0_Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADx/+D/AgAHAAAAAADy/+D/AgAIAAAAAADz/+D/AgAHAAAAAAD0/+D/AgAIAAAAAAD1/+D/AgAHAAAAAAD2/+D/AgAIAAAAAAD3/+D/AgAHAAAAAAD4/+D/AgAIAAAAAAD5/+D/AgAHAAAAAAD6/+D/AgAIAAAAAAD7/+D/AgAHAAAAAAD8/+D/AgAIAAAAAAD9/+D/AgAHAAAAAAD+/+D/AgAIAAAAAAD//+D/AgAHAAAAAAAAAOD/AgAIAAAAAAABAOD/AgAHAAAAAAACAOD/AgAIAAAAAAADAOD/AgAHAAAAAAAEAOD/AgAIAAAAAAAFAOD/AgAHAAAAAAAGAOD/AgAIAAAAAAAHAOD/AgAHAAAAAAAIAOD/AgAIAAAAAAAJAOD/AgAHAAAAAAAKAOD/AgAIAAAAAAALAOD/AgAHAAAAAAAMAOD/AgAIAAAAAAANAOD/AgAHAAAAAAAOAOD/AgAIAAAAAAAPAOD/AgAHAAAAAAAQAOD/AgAIAAAAAAARAOD/AgAHAAAAAAASAOD/AgAIAAAAAAATAOD/AgAHAAAAAAAUAOD/AgAIAAAAAAAVAOD/AgAHAAAAAAAWAOD/AgAIAAAAAAAXAOD/AgAHAAAAAAAYAOD/AgAIAAAAAADy/+L/AgAAAAIAAADz/+L/AgABAAIAAAD0/+L/AgACAAIAAAD1/+L/AgADAAIAAADy/+P/AgAAAAIAAADz/+P/AgABAAIAAAD0/+P/AgACAAIAAAD1/+P/AgADAAIAAADy/+T/AgAAAAIAAADz/+T/AgABAAIAAAD0/+T/AgACAAIAAAD1/+T/AgADAAIAAADy/+X/AgAAAAIAAADz/+X/AgABAAIAAAD0/+X/AgACAAIAAAD1/+X/AgADAAIAAADy/+b/AgAAAAIAAADz/+b/AgABAAIAAAD0/+b/AgACAAIAAAD1/+b/AgADAAIAAADy/+f/AgAAAAIAAADz/+f/AgABAAIAAAD0/+f/AgACAAIAAAD1/+f/AgADAAIAAADy/+j/AgAAAAIAAADz/+j/AgABAAIAAAD0/+j/AgACAAIAAAD1/+j/AgADAAIAAADy/+n/AgAAAAIAAADz/+n/AgABAAIAAAD0/+n/AgACAAIAAAD1/+n/AgADAAIAAADy/+r/AgAAAAIAAADz/+r/AgABAAIAAAD0/+r/AgACAAIAAAD1/+r/AgADAAIAAADy/+v/AgAAAAIAAADz/+v/AgABAAIAAAD0/+v/AgACAAIAAAD1/+v/AgADAAIAAADy/+z/AgAAAAIAAADz/+z/AgABAAIAAAD0/+z/AgACAAIAAAD1/+z/AgADAAIAAADy/+3/AgAAAAIAAADz/+3/AgABAAIAAAD0/+3/AgACAAIAAAD1/+3/AgADAAIAAADy/+7/AgAAAAIAAADz/+7/AgABAAIAAAD0/+7/AgACAAIAAAD1/+7/AgADAAIAAADy/+//AgAAAAIAAADz/+//AgABAAIAAAD0/+//AgACAAIAAAD1/+//AgADAAIAAADy//D/AgAAAAIAAADz//D/AgABAAIAAAD0//D/AgACAAIAAAD1//D/AgADAAIAAADy//H/AgAAAAIAAADz//H/AgABAAIAAAD0//H/AgACAAIAAAD1//H/AgADAAIAAADy//L/AgAAAAIAAADz//L/AgABAAIAAAD0//L/AgACAAIAAAD1//L/AgADAAIAAADy//P/AgAAAAIAAADz//P/AgABAAIAAAD0//P/AgACAAIAAAD1//P/AgADAAIAAADy//T/AgAAAAIAAADz//T/AgABAAIAAAD0//T/AgACAAIAAAD1//T/AgADAAIAAADy//X/AgAAAAIAAADz//X/AgABAAIAAAD0//X/AgACAAIAAAD1//X/AgADAAIAAADy//b/AgAAAAIAAADz//b/AgABAAIAAAD0//b/AgACAAIAAAD1//b/AgADAAIAAADy//f/AgAAAAIAAADz//f/AgABAAIAAAD0//f/AgACAAIAAAD1//f/AgADAAIAAADy//j/AgAAAAIAAADz//j/AgABAAIAAAD0//j/AgACAAIAAAD1//j/AgADAAIAAADy//n/AgAAAAIAAADz//n/AgABAAIAAAD0//n/AgACAAIAAAD1//n/AgADAAIAAADy//r/AgAAAAIAAADz//r/AgABAAIAAAD0//r/AgACAAIAAAD1//r/AgADAAIAAADy//v/AgAAAAIAAADz//v/AgABAAIAAAD0//v/AgACAAIAAAD1//v/AgADAAIAAADy//z/AgAAAAIAAADz//z/AgABAAIAAAD0//z/AgACAAIAAAD1//z/AgADAAIAAADy//3/AgAAAAIAAADz//3/AgABAAIAAAD0//3/AgACAAIAAAD1//3/AgADAAIAAADy//7/AgAAAAIAAADz//7/AgABAAIAAAD0//7/AgACAAIAAAD1//7/AgADAAIAAADy////AgAAAAIAAADz////AgABAAIAAAD0////AgACAAIAAAD1////AgADAAIAAADy/wAAAgAAAAIAAADz/wAAAgABAAIAAAD0/wAAAgACAAIAAAD1/wAAAgADAAIAAADy/wEAAgAAAAIAAADz/wEAAgABAAIAAAD0/wEAAgACAAIAAAD1/wEAAgADAAIAAADy/wIAAgAAAAIAAADz/wIAAgABAAIAAAD0/wIAAgACAAIAAAD1/wIAAgADAAIAAAD2/+L/AgAAAAIAAAD3/+L/AgABAAIAAAD4/+L/AgACAAIAAAD5/+L/AgADAAIAAAD2/+P/AgAAAAIAAAD3/+P/AgABAAIAAAD4/+P/AgACAAIAAAD5/+P/AgADAAIAAAD2/+T/AgAAAAIAAAD3/+T/AgABAAIAAAD4/+T/AgACAAIAAAD5/+T/AgADAAIAAAD2/+X/AgAAAAIAAAD3/+X/AgABAAIAAAD4/+X/AgACAAIAAAD5/+X/AgADAAIAAAD2/+b/AgAAAAIAAAD3/+b/AgABAAIAAAD4/+b/AgACAAIAAAD5/+b/AgADAAIAAAD2/+f/AgAAAAIAAAD3/+f/AgABAAIAAAD4/+f/AgACAAIAAAD5/+f/AgADAAIAAAD2/+j/AgAAAAIAAAD3/+j/AgABAAIAAAD4/+j/AgACAAIAAAD5/+j/AgADAAIAAAD2/+n/AgAAAAIAAAD3/+n/AgABAAIAAAD4/+n/AgACAAIAAAD5/+n/AgADAAIAAAD2/+r/AgAAAAIAAAD3/+r/AgABAAIAAAD4/+r/AgACAAIAAAD5/+r/AgADAAIAAAD2/+v/AgAAAAIAAAD3/+v/AgABAAIAAAD4/+v/AgACAAIAAAD5/+v/AgADAAIAAAD2/+z/AgAAAAIAAAD3/+z/AgABAAIAAAD4/+z/AgACAAIAAAD5/+z/AgADAAIAAAD2/+3/AgAAAAIAAAD3/+3/AgABAAIAAAD4/+3/AgACAAIAAAD5/+3/AgADAAIAAAD2/+7/AgAAAAIAAAD3/+7/AgABAAIAAAD4/+7/AgACAAIAAAD5/+7/AgADAAIAAAD2/+//AgAAAAIAAAD3/+//AgABAAIAAAD4/+//AgACAAIAAAD5/+//AgADAAIAAAD2//D/AgAAAAIAAAD3//D/AgABAAIAAAD4//D/AgACAAIAAAD5//D/AgADAAIAAAD2//H/AgAAAAIAAAD3//H/AgABAAIAAAD4//H/AgACAAIAAAD5//H/AgADAAIAAAD2//L/AgAAAAIAAAD3//L/AgABAAIAAAD4//L/AgACAAIAAAD5//L/AgADAAIAAAD2//P/AgAAAAIAAAD3//P/AgABAAIAAAD4//P/AgACAAIAAAD5//P/AgADAAIAAAD2//T/AgAAAAIAAAD3//T/AgABAAIAAAD4//T/AgACAAIAAAD5//T/AgADAAIAAAD2//X/AgAAAAIAAAD3//X/AgABAAIAAAD4//X/AgACAAIAAAD5//X/AgADAAIAAAD2//b/AgAAAAIAAAD3//b/AgABAAIAAAD4//b/AgACAAIAAAD5//b/AgADAAIAAAD2//f/AgAAAAIAAAD3//f/AgABAAIAAAD4//f/AgACAAIAAAD5//f/AgADAAIAAAD2//j/AgAAAAIAAAD3//j/AgABAAIAAAD4//j/AgACAAIAAAD5//j/AgADAAIAAAD2//n/AgAAAAIAAAD3//n/AgABAAIAAAD4//n/AgACAAIAAAD5//n/AgADAAIAAAD2//r/AgAAAAIAAAD3//r/AgABAAIAAAD4//r/AgACAAIAAAD5//r/AgADAAIAAAD2//v/AgAAAAIAAAD3//v/AgABAAIAAAD4//v/AgACAAIAAAD5//v/AgADAAIAAAD2//z/AgAAAAIAAAD3//z/AgABAAIAAAD4//z/AgACAAIAAAD5//z/AgADAAIAAAD2//3/AgAAAAIAAAD3//3/AgABAAIAAAD4//3/AgACAAIAAAD5//3/AgADAAIAAAD2//7/AgAAAAIAAAD3//7/AgABAAIAAAD4//7/AgACAAIAAAD5//7/AgADAAIAAAD2////AgAAAAIAAAD3////AgABAAIAAAD4////AgACAAIAAAD5////AgADAAIAAAD2/wAAAgAAAAIAAAD3/wAAAgABAAIAAAD4/wAAAgACAAIAAAD5/wAAAgADAAIAAAD2/wEAAgAAAAIAAAD3/wEAAgABAAIAAAD4/wEAAgACAAIAAAD5/wEAAgADAAIAAAD2/wIAAgAAAAIAAAD3/wIAAgABAAIAAAD4/wIAAgACAAIAAAD5/wIAAgADAAIAAAD6/+L/AgAAAAIAAAD7/+L/AgABAAIAAAD8/+L/AgACAAIAAAD9/+L/AgADAAIAAAD6/+P/AgAAAAIAAAD7/+P/AgABAAIAAAD8/+P/AgACAAIAAAD9/+P/AgADAAIAAAD6/+T/AgAAAAIAAAD7/+T/AgABAAIAAAD8/+T/AgACAAIAAAD9/+T/AgADAAIAAAD6/+X/AgAAAAIAAAD7/+X/AgABAAIAAAD8/+X/AgACAAIAAAD9/+X/AgADAAIAAAD6/+b/AgAAAAIAAAD7/+b/AgABAAIAAAD8/+b/AgACAAIAAAD9/+b/AgADAAIAAAD6/+f/AgAAAAIAAAD7/+f/AgABAAIAAAD8/+f/AgACAAIAAAD9/+f/AgADAAIAAAD6/+j/AgAAAAIAAAD7/+j/AgABAAIAAAD8/+j/AgACAAIAAAD9/+j/AgADAAIAAAD6/+n/AgAAAAIAAAD7/+n/AgABAAIAAAD8/+n/AgACAAIAAAD9/+n/AgADAAIAAAD6/+r/AgAAAAIAAAD7/+r/AgABAAIAAAD8/+r/AgACAAIAAAD9/+r/AgADAAIAAAD6/+v/AgAAAAIAAAD7/+v/AgABAAIAAAD8/+v/AgACAAIAAAD9/+v/AgADAAIAAAD6/+z/AgAAAAIAAAD7/+z/AgABAAIAAAD8/+z/AgACAAIAAAD9/+z/AgADAAIAAAD6/+3/AgAAAAIAAAD7/+3/AgABAAIAAAD8/+3/AgACAAIAAAD9/+3/AgADAAIAAAD6/+7/AgAAAAIAAAD7/+7/AgABAAIAAAD8/+7/AgACAAIAAAD9/+7/AgADAAIAAAD6/+//AgAAAAIAAAD7/+//AgABAAIAAAD8/+//AgACAAIAAAD9/+//AgADAAIAAAD6//D/AgAAAAIAAAD7//D/AgABAAIAAAD8//D/AgACAAIAAAD9//D/AgADAAIAAAD6//H/AgAAAAIAAAD7//H/AgABAAIAAAD8//H/AgACAAIAAAD9//H/AgADAAIAAAD6//L/AgAAAAIAAAD7//L/AgABAAIAAAD8//L/AgACAAIAAAD9//L/AgADAAIAAAD6//P/AgAAAAIAAAD7//P/AgABAAIAAAD8//P/AgACAAIAAAD9//P/AgADAAIAAAD6//T/AgAAAAIAAAD7//T/AgABAAIAAAD8//T/AgACAAIAAAD9//T/AgADAAIAAAD6//X/AgAAAAIAAAD7//X/AgABAAIAAAD8//X/AgACAAIAAAD9//X/AgADAAIAAAD6//b/AgAAAAIAAAD7//b/AgABAAIAAAD8//b/AgACAAIAAAD9//b/AgADAAIAAAD6//f/AgAAAAIAAAD7//f/AgABAAIAAAD8//f/AgACAAIAAAD9//f/AgADAAIAAAD6//j/AgAAAAIAAAD7//j/AgABAAIAAAD8//j/AgACAAIAAAD9//j/AgADAAIAAAD6//n/AgAAAAIAAAD7//n/AgABAAIAAAD8//n/AgACAAIAAAD9//n/AgADAAIAAAD6//r/AgAAAAIAAAD7//r/AgABAAIAAAD8//r/AgACAAIAAAD9//r/AgADAAIAAAD6//v/AgAAAAIAAAD7//v/AgABAAIAAAD8//v/AgACAAIAAAD9//v/AgADAAIAAAD6//z/AgAAAAIAAAD7//z/AgABAAIAAAD8//z/AgACAAIAAAD9//z/AgADAAIAAAD6//3/AgAAAAIAAAD7//3/AgABAAIAAAD8//3/AgACAAIAAAD9//3/AgADAAIAAAD6//7/AgAAAAIAAAD7//7/AgABAAIAAAD8//7/AgACAAIAAAD9//7/AgADAAIAAAD6////AgAAAAIAAAD7////AgABAAIAAAD8////AgACAAIAAAD9////AgADAAIAAAD6/wAAAgAAAAIAAAD7/wAAAgABAAIAAAD8/wAAAgACAAIAAAD9/wAAAgADAAIAAAD6/wEAAgAAAAIAAAD7/wEAAgABAAIAAAD8/wEAAgACAAIAAAD9/wEAAgADAAIAAAD6/wIAAgAAAAIAAAD7/wIAAgABAAIAAAD8/wIAAgACAAIAAAD9/wIAAgADAAIAAAD+/+L/AgAAAAIAAAD//+L/AgABAAIAAAAAAOL/AgACAAIAAAABAOL/AgADAAIAAAD+/+P/AgAAAAIAAAD//+P/AgABAAIAAAAAAOP/AgACAAIAAAABAOP/AgADAAIAAAD+/+T/AgAAAAIAAAD//+T/AgABAAIAAAAAAOT/AgACAAIAAAABAOT/AgADAAIAAAD+/+X/AgAAAAIAAAD//+X/AgABAAIAAAAAAOX/AgACAAIAAAABAOX/AgADAAIAAAD+/+b/AgAAAAIAAAD//+b/AgABAAIAAAAAAOb/AgACAAIAAAABAOb/AgADAAIAAAD+/+f/AgAAAAIAAAD//+f/AgABAAIAAAAAAOf/AgACAAIAAAABAOf/AgADAAIAAAD+/+j/AgAAAAIAAAD//+j/AgABAAIAAAAAAOj/AgACAAIAAAABAOj/AgADAAIAAAD+/+n/AgAAAAIAAAD//+n/AgABAAIAAAAAAOn/AgACAAIAAAABAOn/AgADAAIAAAD+/+r/AgAAAAIAAAD//+r/AgABAAIAAAAAAOr/AgACAAIAAAABAOr/AgADAAIAAAD+/+v/AgAAAAIAAAD//+v/AgABAAIAAAAAAOv/AgACAAIAAAABAOv/AgADAAIAAAD+/+z/AgAAAAIAAAD//+z/AgABAAIAAAAAAOz/AgACAAIAAAABAOz/AgADAAIAAAD+/+3/AgAAAAIAAAD//+3/AgABAAIAAAAAAO3/AgACAAIAAAABAO3/AgADAAIAAAD+/+7/AgAAAAIAAAD//+7/AgABAAIAAAAAAO7/AgACAAIAAAABAO7/AgADAAIAAAD+/+//AgAAAAIAAAD//+//AgABAAIAAAAAAO//AgACAAIAAAABAO//AgADAAIAAAD+//D/AgAAAAIAAAD///D/AgABAAIAAAAAAPD/AgACAAIAAAABAPD/AgADAAIAAAD+//H/AgAAAAIAAAD///H/AgABAAIAAAAAAPH/AgACAAIAAAABAPH/AgADAAIAAAD+//L/AgAAAAIAAAD///L/AgABAAIAAAAAAPL/AgACAAIAAAABAPL/AgADAAIAAAD+//P/AgAAAAIAAAD///P/AgABAAIAAAAAAPP/AgACAAIAAAABAPP/AgADAAIAAAD+//T/AgAAAAIAAAD///T/AgABAAIAAAAAAPT/AgACAAIAAAABAPT/AgADAAIAAAD+//X/AgAAAAIAAAD///X/AgABAAIAAAAAAPX/AgACAAIAAAABAPX/AgADAAIAAAD+//b/AgAAAAIAAAD///b/AgABAAIAAAAAAPb/AgACAAIAAAABAPb/AgADAAIAAAD+//f/AgAAAAIAAAD///f/AgABAAIAAAAAAPf/AgACAAIAAAABAPf/AgADAAIAAAD+//j/AgAAAAIAAAD///j/AgABAAIAAAAAAPj/AgACAAIAAAABAPj/AgADAAIAAAD+//n/AgAAAAIAAAD///n/AgABAAIAAAAAAPn/AgACAAIAAAABAPn/AgADAAIAAAD+//r/AgAAAAIAAAD///r/AgABAAIAAAAAAPr/AgACAAIAAAABAPr/AgADAAIAAAD+//v/AgAAAAIAAAD///v/AgABAAIAAAAAAPv/AgACAAIAAAABAPv/AgADAAIAAAD+//z/AgAAAAIAAAD///z/AgABAAIAAAAAAPz/AgACAAIAAAABAPz/AgADAAIAAAD+//3/AgAAAAIAAAD///3/AgABAAIAAAAAAP3/AgACAAIAAAABAP3/AgADAAIAAAD+//7/AgAAAAIAAAD///7/AgABAAIAAAAAAP7/AgACAAIAAAABAP7/AgADAAIAAAD+////AgAAAAIAAAD/////AgABAAIAAAAAAP//AgACAAIAAAABAP//AgADAAIAAAD+/wAAAgAAAAIAAAD//wAAAgABAAIAAAAAAAAAAgACAAIAAAABAAAAAgADAAIAAAD+/wEAAgAAAAIAAAD//wEAAgABAAIAAAAAAAEAAgACAAIAAAABAAEAAgADAAIAAAD+/wIAAgAAAAIAAAD//wIAAgABAAIAAAAAAAIAAgACAAIAAAABAAIAAgADAAIAAAACAOL/AgAAAAIAAAADAOL/AgABAAIAAAAEAOL/AgACAAIAAAAFAOL/AgADAAIAAAACAOP/AgAAAAIAAAADAOP/AgABAAIAAAAEAOP/AgACAAIAAAAFAOP/AgADAAIAAAACAOT/AgAAAAIAAAADAOT/AgABAAIAAAAEAOT/AgACAAIAAAAFAOT/AgADAAIAAAACAOX/AgAAAAIAAAADAOX/AgABAAIAAAAEAOX/AgACAAIAAAAFAOX/AgADAAIAAAACAOb/AgAAAAIAAAADAOb/AgABAAIAAAAEAOb/AgACAAIAAAAFAOb/AgADAAIAAAACAOf/AgAAAAIAAAADAOf/AgABAAIAAAAEAOf/AgACAAIAAAAFAOf/AgADAAIAAAACAOj/AgAAAAIAAAADAOj/AgABAAIAAAAEAOj/AgACAAIAAAAFAOj/AgADAAIAAAACAOn/AgAAAAIAAAADAOn/AgABAAIAAAAEAOn/AgACAAIAAAAFAOn/AgADAAIAAAACAOr/AgAAAAIAAAADAOr/AgABAAIAAAAEAOr/AgACAAIAAAAFAOr/AgADAAIAAAACAOv/AgAAAAIAAAADAOv/AgABAAIAAAAEAOv/AgACAAIAAAAFAOv/AgADAAIAAAACAOz/AgAAAAIAAAADAOz/AgABAAIAAAAEAOz/AgACAAIAAAAFAOz/AgADAAIAAAACAO3/AgAAAAIAAAADAO3/AgABAAIAAAAEAO3/AgACAAIAAAAFAO3/AgADAAIAAAACAO7/AgAAAAIAAAADAO7/AgABAAIAAAAEAO7/AgACAAIAAAAFAO7/AgADAAIAAAACAO//AgAAAAIAAAADAO//AgABAAIAAAAEAO//AgACAAIAAAAFAO//AgADAAIAAAACAPD/AgAAAAIAAAADAPD/AgABAAIAAAAEAPD/AgACAAIAAAAFAPD/AgADAAIAAAACAPH/AgAAAAIAAAADAPH/AgABAAIAAAAEAPH/AgACAAIAAAAFAPH/AgADAAIAAAACAPL/AgAAAAIAAAADAPL/AgABAAIAAAAEAPL/AgACAAIAAAAFAPL/AgADAAIAAAACAPP/AgAAAAIAAAADAPP/AgABAAIAAAAEAPP/AgACAAIAAAAFAPP/AgADAAIAAAACAPT/AgAAAAIAAAADAPT/AgABAAIAAAAEAPT/AgACAAIAAAAFAPT/AgADAAIAAAACAPX/AgAAAAIAAAADAPX/AgABAAIAAAAEAPX/AgACAAIAAAAFAPX/AgADAAIAAAACAPb/AgAAAAIAAAADAPb/AgABAAIAAAAEAPb/AgACAAIAAAAFAPb/AgADAAIAAAACAPf/AgAAAAIAAAADAPf/AgABAAIAAAAEAPf/AgACAAIAAAAFAPf/AgADAAIAAAACAPj/AgAAAAIAAAADAPj/AgABAAIAAAAEAPj/AgACAAIAAAAFAPj/AgADAAIAAAACAPn/AgAAAAIAAAADAPn/AgABAAIAAAAEAPn/AgACAAIAAAAFAPn/AgADAAIAAAACAPr/AgAAAAIAAAADAPr/AgABAAIAAAAEAPr/AgACAAIAAAAFAPr/AgADAAIAAAACAPv/AgAAAAIAAAADAPv/AgABAAIAAAAEAPv/AgACAAIAAAAFAPv/AgADAAIAAAACAPz/AgAAAAIAAAADAPz/AgABAAIAAAAEAPz/AgACAAIAAAAFAPz/AgADAAIAAAACAP3/AgAAAAIAAAADAP3/AgABAAIAAAAEAP3/AgACAAIAAAAFAP3/AgADAAIAAAACAP7/AgAAAAIAAAADAP7/AgABAAIAAAAEAP7/AgACAAIAAAAFAP7/AgADAAIAAAACAP//AgAAAAIAAAADAP//AgABAAIAAAAEAP//AgACAAIAAAAFAP//AgADAAIAAAACAAAAAgAAAAIAAAADAAAAAgABAAIAAAAEAAAAAgACAAIAAAAFAAAAAgADAAIAAAACAAEAAgAAAAIAAAADAAEAAgABAAIAAAAEAAEAAgACAAIAAAAFAAEAAgADAAIAAAACAAIAAgAAAAIAAAADAAIAAgABAAIAAAAEAAIAAgACAAIAAAAFAAIAAgADAAIAAAAGAOL/AgAAAAIAAAAHAOL/AgABAAIAAAAIAOL/AgACAAIAAAAJAOL/AgADAAIAAAAGAOP/AgAAAAIAAAAHAOP/AgABAAIAAAAIAOP/AgACAAIAAAAJAOP/AgADAAIAAAAGAOT/AgAAAAIAAAAHAOT/AgABAAIAAAAIAOT/AgACAAIAAAAJAOT/AgADAAIAAAAGAOX/AgAAAAIAAAAHAOX/AgABAAIAAAAIAOX/AgACAAIAAAAJAOX/AgADAAIAAAAGAOb/AgAAAAIAAAAHAOb/AgABAAIAAAAIAOb/AgACAAIAAAAJAOb/AgADAAIAAAAGAOf/AgAAAAIAAAAHAOf/AgABAAIAAAAIAOf/AgACAAIAAAAJAOf/AgADAAIAAAAGAOj/AgAAAAIAAAAHAOj/AgABAAIAAAAIAOj/AgACAAIAAAAJAOj/AgADAAIAAAAGAOn/AgAAAAIAAAAHAOn/AgABAAIAAAAIAOn/AgACAAIAAAAJAOn/AgADAAIAAAAGAOr/AgAAAAIAAAAHAOr/AgABAAIAAAAIAOr/AgACAAIAAAAJAOr/AgADAAIAAAAGAOv/AgAAAAIAAAAHAOv/AgABAAIAAAAIAOv/AgACAAIAAAAJAOv/AgADAAIAAAAGAOz/AgAAAAIAAAAHAOz/AgABAAIAAAAIAOz/AgACAAIAAAAJAOz/AgADAAIAAAAGAO3/AgAAAAIAAAAHAO3/AgABAAIAAAAIAO3/AgACAAIAAAAJAO3/AgADAAIAAAAGAO7/AgAAAAIAAAAHAO7/AgABAAIAAAAIAO7/AgACAAIAAAAJAO7/AgADAAIAAAAGAO//AgAAAAIAAAAHAO//AgABAAIAAAAIAO//AgACAAIAAAAJAO//AgADAAIAAAAGAPD/AgAAAAIAAAAHAPD/AgABAAIAAAAIAPD/AgACAAIAAAAJAPD/AgADAAIAAAAGAPH/AgAAAAIAAAAHAPH/AgABAAIAAAAIAPH/AgACAAIAAAAJAPH/AgADAAIAAAAGAPL/AgAAAAIAAAAHAPL/AgABAAIAAAAIAPL/AgACAAIAAAAJAPL/AgADAAIAAAAGAPP/AgAAAAIAAAAHAPP/AgABAAIAAAAIAPP/AgACAAIAAAAJAPP/AgADAAIAAAAGAPT/AgAAAAIAAAAHAPT/AgABAAIAAAAIAPT/AgACAAIAAAAJAPT/AgADAAIAAAAGAPX/AgAAAAIAAAAHAPX/AgABAAIAAAAIAPX/AgACAAIAAAAJAPX/AgADAAIAAAAGAPb/AgAAAAIAAAAHAPb/AgABAAIAAAAIAPb/AgACAAIAAAAJAPb/AgADAAIAAAAGAPf/AgAAAAIAAAAHAPf/AgABAAIAAAAIAPf/AgACAAIAAAAJAPf/AgADAAIAAAAGAPj/AgAAAAIAAAAHAPj/AgABAAIAAAAIAPj/AgACAAIAAAAJAPj/AgADAAIAAAAGAPn/AgAAAAIAAAAHAPn/AgABAAIAAAAIAPn/AgACAAIAAAAJAPn/AgADAAIAAAAGAPr/AgAAAAIAAAAHAPr/AgABAAIAAAAIAPr/AgACAAIAAAAJAPr/AgADAAIAAAAGAPv/AgAAAAIAAAAHAPv/AgABAAIAAAAIAPv/AgACAAIAAAAJAPv/AgADAAIAAAAGAPz/AgAAAAIAAAAHAPz/AgABAAIAAAAIAPz/AgACAAIAAAAJAPz/AgADAAIAAAAGAP3/AgAAAAIAAAAHAP3/AgABAAIAAAAIAP3/AgACAAIAAAAJAP3/AgADAAIAAAAGAP7/AgAAAAIAAAAHAP7/AgABAAIAAAAIAP7/AgACAAIAAAAJAP7/AgADAAIAAAAGAP//AgAAAAIAAAAHAP//AgABAAIAAAAIAP//AgACAAIAAAAJAP//AgADAAIAAAAGAAAAAgAAAAIAAAAHAAAAAgABAAIAAAAIAAAAAgACAAIAAAAJAAAAAgADAAIAAAAGAAEAAgAAAAIAAAAHAAEAAgABAAIAAAAIAAEAAgACAAIAAAAJAAEAAgADAAIAAAAGAAIAAgAAAAIAAAAHAAIAAgABAAIAAAAIAAIAAgACAAIAAAAJAAIAAgADAAIAAAAKAOL/AgAAAAIAAAALAOL/AgABAAIAAAAMAOL/AgACAAIAAAANAOL/AgADAAIAAAAKAOP/AgAAAAIAAAALAOP/AgABAAIAAAAMAOP/AgACAAIAAAANAOP/AgADAAIAAAAKAOT/AgAAAAIAAAALAOT/AgABAAIAAAAMAOT/AgACAAIAAAANAOT/AgADAAIAAAAKAOX/AgAAAAIAAAALAOX/AgABAAIAAAAMAOX/AgACAAIAAAANAOX/AgADAAIAAAAKAOb/AgAAAAIAAAALAOb/AgABAAIAAAAMAOb/AgACAAIAAAANAOb/AgADAAIAAAAKAOf/AgAAAAIAAAALAOf/AgABAAIAAAAMAOf/AgACAAIAAAANAOf/AgADAAIAAAAKAOj/AgAAAAIAAAALAOj/AgABAAIAAAAMAOj/AgACAAIAAAANAOj/AgADAAIAAAAKAOn/AgAAAAIAAAALAOn/AgABAAIAAAAMAOn/AgACAAIAAAANAOn/AgADAAIAAAAKAOr/AgAAAAIAAAALAOr/AgABAAIAAAAMAOr/AgACAAIAAAANAOr/AgADAAIAAAAKAOv/AgAAAAIAAAALAOv/AgABAAIAAAAMAOv/AgACAAIAAAANAOv/AgADAAIAAAAKAOz/AgAAAAIAAAALAOz/AgABAAIAAAAMAOz/AgACAAIAAAANAOz/AgADAAIAAAAKAO3/AgAAAAIAAAALAO3/AgABAAIAAAAMAO3/AgACAAIAAAANAO3/AgADAAIAAAAKAO7/AgAAAAIAAAALAO7/AgABAAIAAAAMAO7/AgACAAIAAAANAO7/AgADAAIAAAAKAO//AgAAAAIAAAALAO//AgABAAIAAAAMAO//AgACAAIAAAANAO//AgADAAIAAAAKAPD/AgAAAAIAAAALAPD/AgABAAIAAAAMAPD/AgACAAIAAAANAPD/AgADAAIAAAAKAPH/AgAAAAIAAAALAPH/AgABAAIAAAAMAPH/AgACAAIAAAANAPH/AgADAAIAAAAKAPL/AgAAAAIAAAALAPL/AgABAAIAAAAMAPL/AgACAAIAAAANAPL/AgADAAIAAAAKAPP/AgAAAAIAAAALAPP/AgABAAIAAAAMAPP/AgACAAIAAAANAPP/AgADAAIAAAAKAPT/AgAAAAIAAAALAPT/AgABAAIAAAAMAPT/AgACAAIAAAANAPT/AgADAAIAAAAKAPX/AgAAAAIAAAALAPX/AgABAAIAAAAMAPX/AgACAAIAAAANAPX/AgADAAIAAAAKAPb/AgAAAAIAAAALAPb/AgABAAIAAAAMAPb/AgACAAIAAAANAPb/AgADAAIAAAAKAPf/AgAAAAIAAAALAPf/AgABAAIAAAAMAPf/AgACAAIAAAANAPf/AgADAAIAAAAKAPj/AgAAAAIAAAALAPj/AgABAAIAAAAMAPj/AgACAAIAAAANAPj/AgADAAIAAAAKAPn/AgAAAAIAAAALAPn/AgABAAIAAAAMAPn/AgACAAIAAAANAPn/AgADAAIAAAAKAPr/AgAAAAIAAAALAPr/AgABAAIAAAAMAPr/AgACAAIAAAANAPr/AgADAAIAAAAKAPv/AgAAAAIAAAALAPv/AgABAAIAAAAMAPv/AgACAAIAAAANAPv/AgADAAIAAAAKAPz/AgAAAAIAAAALAPz/AgABAAIAAAAMAPz/AgACAAIAAAANAPz/AgADAAIAAAAKAP3/AgAAAAIAAAALAP3/AgABAAIAAAAMAP3/AgACAAIAAAANAP3/AgADAAIAAAAKAP7/AgAAAAIAAAALAP7/AgABAAIAAAAMAP7/AgACAAIAAAANAP7/AgADAAIAAAAKAP//AgAAAAIAAAALAP//AgABAAIAAAAMAP//AgACAAIAAAANAP//AgADAAIAAAAKAAAAAgAAAAIAAAALAAAAAgABAAIAAAAMAAAAAgACAAIAAAANAAAAAgADAAIAAAAKAAEAAgAAAAIAAAALAAEAAgABAAIAAAAMAAEAAgACAAIAAAANAAEAAgADAAIAAAAKAAIAAgAAAAIAAAALAAIAAgABAAIAAAAMAAIAAgACAAIAAAANAAIAAgADAAIAAAAOAOL/AgAAAAIAAAAPAOL/AgABAAIAAAAQAOL/AgACAAIAAAARAOL/AgADAAIAAAAOAOP/AgAAAAIAAAAPAOP/AgABAAIAAAAQAOP/AgACAAIAAAARAOP/AgADAAIAAAAOAOT/AgAAAAIAAAAPAOT/AgABAAIAAAAQAOT/AgACAAIAAAARAOT/AgADAAIAAAAOAOX/AgAAAAIAAAAPAOX/AgABAAIAAAAQAOX/AgACAAIAAAARAOX/AgADAAIAAAAOAOb/AgAAAAIAAAAPAOb/AgABAAIAAAAQAOb/AgACAAIAAAARAOb/AgADAAIAAAAOAOf/AgAAAAIAAAAPAOf/AgABAAIAAAAQAOf/AgACAAIAAAARAOf/AgADAAIAAAAOAOj/AgAAAAIAAAAPAOj/AgABAAIAAAAQAOj/AgACAAIAAAARAOj/AgADAAIAAAAOAOn/AgAAAAIAAAAPAOn/AgABAAIAAAAQAOn/AgACAAIAAAARAOn/AgADAAIAAAAOAOr/AgAAAAIAAAAPAOr/AgABAAIAAAAQAOr/AgACAAIAAAARAOr/AgADAAIAAAAOAOv/AgAAAAIAAAAPAOv/AgABAAIAAAAQAOv/AgACAAIAAAARAOv/AgADAAIAAAAOAOz/AgAAAAIAAAAPAOz/AgABAAIAAAAQAOz/AgACAAIAAAARAOz/AgADAAIAAAAOAO3/AgAAAAIAAAAPAO3/AgABAAIAAAAQAO3/AgACAAIAAAARAO3/AgADAAIAAAAOAO7/AgAAAAIAAAAPAO7/AgABAAIAAAAQAO7/AgACAAIAAAARAO7/AgADAAIAAAAOAO//AgAAAAIAAAAPAO//AgABAAIAAAAQAO//AgACAAIAAAARAO//AgADAAIAAAAOAPD/AgAAAAIAAAAPAPD/AgABAAIAAAAQAPD/AgACAAIAAAARAPD/AgADAAIAAAAOAPH/AgAAAAIAAAAPAPH/AgABAAIAAAAQAPH/AgACAAIAAAARAPH/AgADAAIAAAAOAPL/AgAAAAIAAAAPAPL/AgABAAIAAAAQAPL/AgACAAIAAAARAPL/AgADAAIAAAAOAPP/AgAAAAIAAAAPAPP/AgABAAIAAAAQAPP/AgACAAIAAAARAPP/AgADAAIAAAAOAPT/AgAAAAIAAAAPAPT/AgABAAIAAAAQAPT/AgACAAIAAAARAPT/AgADAAIAAAAOAPX/AgAAAAIAAAAPAPX/AgABAAIAAAAQAPX/AgACAAIAAAARAPX/AgADAAIAAAAOAPb/AgAAAAIAAAAPAPb/AgABAAIAAAAQAPb/AgACAAIAAAARAPb/AgADAAIAAAAOAPf/AgAAAAIAAAAPAPf/AgABAAIAAAAQAPf/AgACAAIAAAARAPf/AgADAAIAAAAOAPj/AgAAAAIAAAAPAPj/AgABAAIAAAAQAPj/AgACAAIAAAARAPj/AgADAAIAAAAOAPn/AgAAAAIAAAAPAPn/AgABAAIAAAAQAPn/AgACAAIAAAARAPn/AgADAAIAAAAOAPr/AgAAAAIAAAAPAPr/AgABAAIAAAAQAPr/AgACAAIAAAARAPr/AgADAAIAAAAOAPv/AgAAAAIAAAAPAPv/AgABAAIAAAAQAPv/AgACAAIAAAARAPv/AgADAAIAAAAOAPz/AgAAAAIAAAAPAPz/AgABAAIAAAAQAPz/AgACAAIAAAARAPz/AgADAAIAAAAOAP3/AgAAAAIAAAAPAP3/AgABAAIAAAAQAP3/AgACAAIAAAARAP3/AgADAAIAAAAOAP7/AgAAAAIAAAAPAP7/AgABAAIAAAAQAP7/AgACAAIAAAARAP7/AgADAAIAAAAOAP//AgAAAAIAAAAPAP//AgABAAIAAAAQAP//AgACAAIAAAARAP//AgADAAIAAAAOAAAAAgAAAAIAAAAPAAAAAgABAAIAAAAQAAAAAgACAAIAAAARAAAAAgADAAIAAAAOAAEAAgAAAAIAAAAPAAEAAgABAAIAAAAQAAEAAgACAAIAAAARAAEAAgADAAIAAAAOAAIAAgAAAAIAAAAPAAIAAgABAAIAAAAQAAIAAgACAAIAAAARAAIAAgADAAIAAAASAOL/AgAAAAIAAAATAOL/AgABAAIAAAAUAOL/AgACAAIAAAAVAOL/AgADAAIAAAASAOP/AgAAAAIAAAATAOP/AgABAAIAAAAUAOP/AgACAAIAAAAVAOP/AgADAAIAAAASAOT/AgAAAAIAAAATAOT/AgABAAIAAAAUAOT/AgACAAIAAAAVAOT/AgADAAIAAAASAOX/AgAAAAIAAAATAOX/AgABAAIAAAAUAOX/AgACAAIAAAAVAOX/AgADAAIAAAASAOb/AgAAAAIAAAATAOb/AgABAAIAAAAUAOb/AgACAAIAAAAVAOb/AgADAAIAAAASAOf/AgAAAAIAAAATAOf/AgABAAIAAAAUAOf/AgACAAIAAAAVAOf/AgADAAIAAAASAOj/AgAAAAIAAAATAOj/AgABAAIAAAAUAOj/AgACAAIAAAAVAOj/AgADAAIAAAASAOn/AgAAAAIAAAATAOn/AgABAAIAAAAUAOn/AgACAAIAAAAVAOn/AgADAAIAAAASAOr/AgAAAAIAAAATAOr/AgABAAIAAAAUAOr/AgACAAIAAAAVAOr/AgADAAIAAAASAOv/AgAAAAIAAAATAOv/AgABAAIAAAAUAOv/AgACAAIAAAAVAOv/AgADAAIAAAASAOz/AgAAAAIAAAATAOz/AgABAAIAAAAUAOz/AgACAAIAAAAVAOz/AgADAAIAAAASAO3/AgAAAAIAAAATAO3/AgABAAIAAAAUAO3/AgACAAIAAAAVAO3/AgADAAIAAAASAO7/AgAAAAIAAAATAO7/AgABAAIAAAAUAO7/AgACAAIAAAAVAO7/AgADAAIAAAASAO//AgAAAAIAAAATAO//AgABAAIAAAAUAO//AgACAAIAAAAVAO//AgADAAIAAAASAPD/AgAAAAIAAAATAPD/AgABAAIAAAAUAPD/AgACAAIAAAAVAPD/AgADAAIAAAASAPH/AgAAAAIAAAATAPH/AgABAAIAAAAUAPH/AgACAAIAAAAVAPH/AgADAAIAAAASAPL/AgAAAAIAAAATAPL/AgABAAIAAAAUAPL/AgACAAIAAAAVAPL/AgADAAIAAAASAPP/AgAAAAIAAAATAPP/AgABAAIAAAAUAPP/AgACAAIAAAAVAPP/AgADAAIAAAASAPT/AgAAAAIAAAATAPT/AgABAAIAAAAUAPT/AgACAAIAAAAVAPT/AgADAAIAAAASAPX/AgAAAAIAAAATAPX/AgABAAIAAAAUAPX/AgACAAIAAAAVAPX/AgADAAIAAAASAPb/AgAAAAIAAAATAPb/AgABAAIAAAAUAPb/AgACAAIAAAAVAPb/AgADAAIAAAASAPf/AgAAAAIAAAATAPf/AgABAAIAAAAUAPf/AgACAAIAAAAVAPf/AgADAAIAAAASAPj/AgAAAAIAAAATAPj/AgABAAIAAAAUAPj/AgACAAIAAAAVAPj/AgADAAIAAAASAPn/AgAAAAIAAAATAPn/AgABAAIAAAAUAPn/AgACAAIAAAAVAPn/AgADAAIAAAASAPr/AgAAAAIAAAATAPr/AgABAAIAAAAUAPr/AgACAAIAAAAVAPr/AgADAAIAAAASAPv/AgAAAAIAAAATAPv/AgABAAIAAAAUAPv/AgACAAIAAAAVAPv/AgADAAIAAAASAPz/AgAAAAIAAAATAPz/AgABAAIAAAAUAPz/AgACAAIAAAAVAPz/AgADAAIAAAASAP3/AgAAAAIAAAATAP3/AgABAAIAAAAUAP3/AgACAAIAAAAVAP3/AgADAAIAAAASAP7/AgAAAAIAAAATAP7/AgABAAIAAAAUAP7/AgACAAIAAAAVAP7/AgADAAIAAAASAP//AgAAAAIAAAATAP//AgABAAIAAAAUAP//AgACAAIAAAAVAP//AgADAAIAAAASAAAAAgAAAAIAAAATAAAAAgABAAIAAAAUAAAAAgACAAIAAAAVAAAAAgADAAIAAAASAAEAAgAAAAIAAAATAAEAAgABAAIAAAAUAAEAAgACAAIAAAAVAAEAAgADAAIAAAASAAIAAgAAAAIAAAATAAIAAgABAAIAAAAUAAIAAgACAAIAAAAVAAIAAgADAAIAAAAWAOL/AgAAAAIAAAAXAOL/AgABAAIAAAAWAOP/AgAAAAIAAAAXAOP/AgABAAIAAAAWAOT/AgAAAAIAAAAXAOT/AgABAAIAAAAWAOX/AgAAAAIAAAAXAOX/AgABAAIAAAAWAOb/AgAAAAIAAAAXAOb/AgABAAIAAAAWAOf/AgAAAAIAAAAXAOf/AgABAAIAAAAWAOj/AgAAAAIAAAAXAOj/AgABAAIAAAAWAOn/AgAAAAIAAAAXAOn/AgABAAIAAAAWAOr/AgAAAAIAAAAXAOr/AgABAAIAAAAWAOv/AgAAAAIAAAAXAOv/AgABAAIAAAAWAOz/AgAAAAIAAAAXAOz/AgABAAIAAAAWAO3/AgAAAAIAAAAXAO3/AgABAAIAAAAWAO7/AgAAAAIAAAAXAO7/AgABAAIAAAAWAO//AgAAAAIAAAAXAO//AgABAAIAAAAWAPD/AgAAAAIAAAAXAPD/AgABAAIAAAAWAPH/AgAAAAIAAAAXAPH/AgABAAIAAAAWAPL/AgAAAAIAAAAXAPL/AgABAAIAAAAWAPP/AgAAAAIAAAAXAPP/AgABAAIAAAAWAPT/AgAAAAIAAAAXAPT/AgABAAIAAAAWAPX/AgAAAAIAAAAXAPX/AgABAAIAAAAWAPb/AgAAAAIAAAAXAPb/AgABAAIAAAAWAPf/AgAAAAIAAAAXAPf/AgABAAIAAAAWAPj/AgAAAAIAAAAXAPj/AgABAAIAAAAWAPn/AgAAAAIAAAAXAPn/AgABAAIAAAAWAPr/AgAAAAIAAAAXAPr/AgABAAIAAAAWAPv/AgAAAAIAAAAXAPv/AgABAAIAAAAWAPz/AgAAAAIAAAAXAPz/AgABAAIAAAAWAP3/AgAAAAIAAAAXAP3/AgABAAIAAAAWAP7/AgAAAAIAAAAXAP7/AgABAAIAAAAWAP//AgAAAAIAAAAXAP//AgABAAIAAAAWAAAAAgAAAAIAAAAXAAAAAgABAAIAAAAWAAEAAgAAAAIAAAAXAAEAAgABAAIAAAAWAAIAAgAAAAIAAAAXAAIAAgABAAIAAAA=")
tile_set = ExtResource("2_ke1ju")

[node name="L1_Details" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_ke1ju")

[node name="L3_Overhangs" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_ke1ju")

[node name="L2_Colliders" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADx//j/AAAAAAAAAADx//f/AAAAAAAAAADx//b/AAAAAAAAAADx//X/AAAAAAAAAADx//T/AAAAAAAAAADx//P/AAAAAAAAAADx//L/AAAAAAAAAADx//H/AAAAAAAAAADx//D/AAAAAAAAAADx/+//AAAAAAAAAADx/+7/AAAAAAAAAADx/+3/AAAAAAAAAADx/+z/AAAAAAAAAADx/+v/AAAAAAAAAADx/+r/AAAAAAAAAADx/+n/AAAAAAAAAADx/+j/AAAAAAAAAADx/+f/AAAAAAAAAADx/+b/AAAAAAAAAADx/+X/AAAAAAAAAADx/+T/AAAAAAAAAADx/+P/AAAAAAAAAADx/+L/AAAAAAAAAADx//n/AAAAAAAAAADx//r/AAAAAAAAAADx//v/AAAAAAAAAADx//z/AAAAAAAAAADx//3/AAAAAAAAAADx//7/AAAAAAAAAADx////AAAAAAAAAADx/wAAAAAAAAAAAADx/wEAAAAAAAAAAADx/wIAAAAAAAAAAADx/wMAAAAAAAAAAADy/wMAAAAAAAAAAADz/wMAAAAAAAAAAAD0/wMAAAAAAAAAAAD1/wMAAAAAAAAAAAD2/wMAAAAAAAAAAAD3/wMAAAAAAAAAAAD4/wMAAAAAAAAAAAD5/wMAAAAAAAAAAAD6/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAAOAAMAAAAAAAAAAAAPAAMAAAAAAAAAAAAQAAMAAAAAAAAAAAARAAMAAAAAAAAAAAASAAMAAAAAAAAAAAATAAMAAAAAAAAAAAAUAAMAAAAAAAAAAAAVAAMAAAAAAAAAAAAWAAMAAAAAAAAAAAAXAAMAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAAAAAAAAAAAAAAYAP//AAAAAAAAAAAYAP7/AAAAAAAAAAAYAP3/AAAAAAAAAAAYAPz/AAAAAAAAAAAYAPv/AAAAAAAAAAAYAPr/AAAAAAAAAAAYAPn/AAAAAAAAAAAYAPj/AAAAAAAAAAAYAPf/AAAAAAAAAAAYAPb/AAAAAAAAAAAYAPX/AAAAAAAAAAAYAPT/AAAAAAAAAAAYAPP/AAAAAAAAAAAYAPL/AAAAAAAAAAAYAPH/AAAAAAAAAAAYAPD/AAAAAAAAAAAYAO//AAAAAAAAAAAYAO7/AAAAAAAAAAAYAO3/AAAAAAAAAAAYAOz/AAAAAAAAAAAYAOv/AAAAAAAAAAAYAOr/AAAAAAAAAAAYAOn/AAAAAAAAAAAYAOj/AAAAAAAAAAAYAOf/AAAAAAAAAAAYAOb/AAAAAAAAAAAYAOX/AAAAAAAAAAAYAOT/AAAAAAAAAAAYAOP/AAAAAAAAAAAYAOL/AAAAAAAAAAAYAOH/AAAAAAAAAADx/+H/AAAAAAAAAADy/+H/AgAHAAEAAADz/+H/AgAIAAEAAAD0/+H/AgAHAAEAAAD1/+H/AgAIAAEAAAD2/+H/AgAHAAEAAAD3/+H/AgAIAAEAAAD4/+H/AgAHAAEAAAD5/+H/AgAIAAEAAAD6/+H/AgAHAAEAAAD7/+H/AgAIAAEAAAD8/+H/AgAHAAEAAAD9/+H/AgAIAAEAAAD+/+H/AgAHAAEAAAD//+H/AgAIAAEAAAAAAOH/AgAHAAEAAAABAOH/AgAIAAEAAAACAOH/AgAHAAEAAAADAOH/AgAIAAEAAAAEAOH/AgAHAAEAAAAFAOH/AgAIAAEAAAAGAOH/AgAHAAEAAAAHAOH/AgAIAAEAAAAIAOH/AgAHAAEAAAAJAOH/AgAIAAEAAAAKAOH/AgAHAAEAAAALAOH/AgAIAAEAAAAMAOH/AgAHAAEAAAANAOH/AgAIAAEAAAAOAOH/AgAHAAEAAAAPAOH/AgAIAAEAAAAQAOH/AgAHAAEAAAARAOH/AgAIAAEAAAASAOH/AgAHAAEAAAATAOH/AgAIAAEAAAAUAOH/AgAHAAEAAAAVAOH/AgAIAAEAAAAWAOH/AgAHAAEAAAAXAOH/AgAIAAEAAAA=")
tile_set = ExtResource("2_ke1ju")
